[package]
name = "tm-language"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
json5 = "0.4.1"

[dev-dependencies]
anyhow = "1.0.75"
ron = "0.8.1"

[features]
default = []
