[package]
name = "tm-language"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "TmLanguage's definition and format conversion"
repository = "https://github.com/ygg-lang/yggdrasil-druid/tree/dev/projects/tm-language"
documentation = "https://docs.rs/tm-language"
readme = "readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
plist = "1.5.0"
json5 = "0.4.1"
serde_yaml = "0.9.25"

[dev-dependencies]
anyhow = "1.0.75"
ron = "0.8.1"

[features]
default = []
