[package]
name = "yggdrasil-from"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Grammar Convert from Others"
repository = "https://github.com/ygg-lang/yggdrasil-druid"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
convert_case = "0.6.0"
pest_meta = "2.5.0"
antlr-rust = "0.3.0-beta"
anyhow = "1.0.66"

[dependencies.yggdrasil-ir]
#path = "../ygg-ir"
version = "0.1.3"

[dev-dependencies]

[features]
