[package]
name = "yggdrasil-from"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Yggdrasil Grammar Convert from Others"
repository = "https://github.com/ygg-lang/yggdrasil-druid"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
bnf = "0.5.0"
abnf = "0.13.0"
ebnf = "0.1.4"
lrlex = "0.13.3"
lrpar = "0.13.3"
convert_case = "0.6.0"
antlr-rust = "0.3.0-beta"

[dependencies.pest_meta]
version = "2.7.4"
features = ["grammar-extras"]

[dependencies.yggdrasil-ir]
#path = "../ygg-ir"
version = "0.1.3"

[dev-dependencies]

[features]
